--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -2,7 +2,8 @@
     and (min-width: 421px){
         .questionsPage__container{
             width: 100%;
-            height: 750px;
+            min-height: 750px;
+            height: min-content;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -10,6 +11,7 @@
         }
 
         .secction_story{  
+        margin-top: 50px;
         width: 80%;  
         display: flex;
         flex-direction: column;
@@ -50,10 +52,13 @@
         }
         
         .myHistory__container{
+   
             width:100%;
             display: flex;
-            flex-direction: row;
-            justify-content: center;
+            min-height: 700px;
+            height: min-content;
+            flex-direction: column;
+            justify-content: flex-start;
             align-items: center;
         }
         .question_title_history{
@@ -74,7 +79,7 @@
             " titleText titleText"
             "textSection pictureSection";
             justify-content: flex-start;
-            align-items: flex-start;
+            align-items: center;
         }
         
         .question_picture{
@@ -91,7 +96,8 @@
         .text_history_section{
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
+            align-items: center;
         
         }
         
@@ -130,8 +136,7 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            /* justify-content: center;
-            align-items: center; */
+
         }
 
         .question_secction_button{
