--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -30,8 +30,8 @@
   and (min-width: 421px) {
 
     .profilePicture{
-        width: 50%;
-        border-radius: 80px;
+        width:30vh;
+        border-radius: 50px;
         margin-top: 50px;
         cursor:pointer;
         border: 3px solid #548CA8;
@@ -52,7 +52,7 @@
         align-items: center;
     }
     .iconHeader{
-        width:20px;
+        width:3vh;
         margin: 10px;
         margin-top: 30px;
         cursor:pointer;
