--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -6,7 +6,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* margin-top: 150px; */
 }
 
 @media screen 
@@ -20,6 +19,8 @@ and (min-width:421px){
         justify-content: space-around;
         align-items: center;
         border-radius: 100px;
+        box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+
     }
     .email_contact_section, .phone_contact_section{
         width: 100%;
