--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -35,6 +35,8 @@
         margin-top: 50px;
         cursor:pointer;
         border: 3px solid #548CA8;
+        box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+
     
     }
 
