--- a/new-portfolio/src/components/logo/Logo.css
+++ b/new-portfolio/src/components/logo/Logo.css
@@ -5,13 +5,18 @@
         width: 7vh;
         cursor: pointer;
         border-radius: 15px;
-        border: 1px dashed white
+        border: 1px dashed white;
+        box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+
+        
     }
     .logo_footer{
         width:7vh;
         cursor: pointer;
         border-radius: 10px;
-        border: 1px dashed white
+        border: 1px dashed white;
+        box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+
     }
   }
 
