--- a/new-portfolio/src/components/projects/ProjectsButton.css
+++ b/new-portfolio/src/components/projects/ProjectsButton.css
@@ -21,7 +21,8 @@ margin-top:100px;
         align-items: center;
         font-weight: bolder;
         font-size: 2vw;
-        /* box-shadow: 5px 10px 20px #548CA8; */
+        box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+
     }
     .projects:hover{
         /* width: 20%;
