--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -47,15 +47,17 @@ and (min-width:421px){
 .form_input, .form_textarea{
     margin: 10px;
     padding: 10px;
-    width: 60%;
+    width: 70%;
     border: 2px solid #e2e2e2;
     border-radius: 10px;
     font-family: 'Architects Daughter', cursive;
-    /* font-size: 4vw; */
 }
 .form_input:focus{
     outline: none;
 	border: 2px solid #fff;
+}
+.form_textarea{
+    height: 100px;
 }
 
 ::-webkit-input-placeholder{
