--- a/new-portfolio/src/pages/QuizPage.css
+++ b/new-portfolio/src/pages/QuizPage.css
@@ -15,10 +15,10 @@
 }
 
 .title_WhyPage{
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     color: white;
     font-weight: bolder;
     font-size: 1.5vw;
@@ -28,7 +28,7 @@
 .subtitle_WhyPage{
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     color: white;
     font-weight: bolder;
@@ -39,7 +39,7 @@
     margin-top: 30px;
     width:100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 
 }
 .quizButton_section{
