--- a/new-portfolio/src/components/trivia/Trivial.css
+++ b/new-portfolio/src/components/trivia/Trivial.css
@@ -12,9 +12,16 @@
   }
 
 
-.score-section {
-    display: flex;
-    align-items: center;
+.score_section {
+  width: 100%;
+  height: min-content;
+  min-height: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 4vh;
+  color: white;
   }
   
   /* QUESTION/TIMER/LEFT SECTION */
@@ -51,7 +58,7 @@
   button {
     width: 70%;
     font-size: 1.5vw;
-    color: #fff;
+    color: white;
     background-color: #476072;
     border-radius: 10px;
     display: flex;
@@ -59,7 +66,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border: 1px solid white;
+    border: none;
   }
   
   .correct {
@@ -105,9 +112,16 @@
         font-weight: bolder;
       }
 
-      .score-section {
+      .score_section {
+        width: 100%;
+        height: min-content;
+        min-height: 200px;
         display: flex;
+        flex-direction: row;
         align-items: center;
+        justify-content: center;
+        font-size: 3.5vh;
+        color: white;
       }
       
       /* QUESTION/TIMER/LEFT SECTION */
