--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -12,16 +12,16 @@
 and (min-width:421px){
     .contact_items{
         background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
-        width: 35%;
+        width: 40%;
         height: 80px;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
         border-radius: 100px;
         box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-
     }
+
     .email_contact_section, .phone_contact_section{
         width: 100%;
         color:#EEEEEE;
@@ -51,9 +51,13 @@ and (min-width:421px){
           opacity: 1;
         }
       }
-      
-      
-      
+      .logo_contact_section{
+        width: 20%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+      }
 
     
 }
