--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -1,26 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap');
 
-.header__container{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
-}
-.header_logo_container{
-  display: flex;
-  flex-direction: row;
-  justify-content:flex-start;
-  margin-top:20px;
-  margin-left:30px
-}
-.profile_section{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
+
 
 
 
@@ -28,9 +9,33 @@
 /* tablet and desktop size */
 @media screen 
   and (min-width: 421px) {
+    .header__container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+    }
 
+    .header_logo_container{
+        width: 10%;
+        margin-top:20px;
+        margin-left: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+    
+    }
+    .profile_section{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
     .profilePicture{
-        width:30vh;
+        width:45%;
         border-radius: 50px;
         margin-top: 50px;
         cursor:pointer;
@@ -44,21 +49,31 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-    
+        justify-content: flex-start;
     }
+
     .iconSection{
-        width: 100%;
+        width:100%;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        align-items: center;
+    
+    }
+
+    .icon_container{
+        width: 35%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
     }
     .iconHeader{
-        width:3vh;
+        width: 40%;
         margin: 10px;
         margin-top: 30px;
         cursor:pointer;
     }
+
+
     .name_title{
         font-weight: bolder;
         font-size: 3vw;
@@ -89,6 +104,22 @@
 @media screen 
   and (max-width: 420px) 
  {
+    .header__container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+    }
+    .header_logo_container{
+        width: 130%;
+        margin-top:20px;
+        margin-left: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+    
+    }
     .profilePicture{
         width: 100%;
         border-radius: 80px;
@@ -111,7 +142,10 @@
         align-items: flex-end;
         justify-content: space-between;
     }
-
+    .icon_container{
+        display: flex;
+        flex-direction: column;
+    }
     .iconHeader{
         width:30%;
         margin: 5px;
