--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -126,7 +126,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        align-items:end;
+        align-items:flex-end;
     }
     .iconSection{
         width: 50%;
