--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -1,14 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap');
 
-
-
-
-
-
-/* tablet and desktop size */
+/* desktop size */
 @media screen 
-  and (min-width: 421px) {
+  and (min-width: 1024px) {
     .header__container{
         width: 100%;
         display: grid;
@@ -93,10 +88,95 @@
 
   }
 
+  /* tablet size */
+  @media screen 
+    and (max-width:1023px)
+    and (min-width:768px){
+        .header__container{
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+        }
+        .header_logo_container{
+            width: 130%;
+            margin-top:20px;
+            margin-left: 30px;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: flex-start;
+        
+        }
+        .profilePicture{
+            width: 100%;
+            border-radius: 80px;
+            margin-top: 50px;
+            cursor:pointer;
+            border: 2px solid #548CA8;
+        }
+        .headerIcon_container{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items:flex-end;
+        }
+        .iconSection{
+            width: 50%;
+            margin-top:20px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: space-between;
+        }
+        .icon_container{
+            display: flex;
+            flex-direction: column;
+        }
+        .iconHeader{
+            width:30%;
+            margin: 5px;
+            cursor:pointer;
+          
+        }
+    
+        .name_title{
+            font-weight: bolder;
+            font-size: 4.5vw;
+            font-family: 'Bonheur Royale', cursive;
+            cursor: pointer;
+            text-shadow: 1px 1px 2px black;
+            color: white;
+        }
+    
+        .skills_header_hidden{
+            display: none;
+        }
+        .navBarIcon2{
+            width: 100%;
+            color:white;
+            margin-bottom: 5px;
+            
+        }
+        .navBarIcon{
+            position: absolute;
+            top:50px;
+            right:0px;
+            width:100%;
+            height:360px;
+            background-color: #334257;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+        }
+        }
   
   /* phone size */
 @media screen 
-  and (max-width: 420px) 
+and (max-width:767px)
+and (min-width:320px)
  {
     .header__container{
         width: 100%;
