--- a/new-portfolio/src/components/projects/ProjectsButton.css
+++ b/new-portfolio/src/components/projects/ProjectsButton.css
@@ -1,14 +1,15 @@
-.projects_section_container{
-    width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-margin-top:100px;
-}
 
+/* desktop size */
 @media screen 
-  and (min-width: 421px){
+and (min-width: 1024px){
+    .projects_section_container{
+      width: 100%;
+      height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top:100px;
+    }
     .projects{
         width: 15%;
         height: 80px;
@@ -44,9 +45,55 @@ margin-top:100px;
     }
     
   }
+/* tablet size */
+@media screen 
+    and (max-width:1023px)
+    and (min-width:768px){
+      .projects_section_container{
+        width:50%;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top:100px;
+      }
+      .projects{
+          width: 45%;
+          height: 80px;
+          background-color:#334257;
+          border-radius: 20px;
+          color: #EEEEEE;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-weight: bolder;
+          font-size: 3vw;
+          animation: rotate-center 15s ease-in-out infinite both;
+      }
+      @keyframes rotate-center {
+        0% {
+          transform: rotate(0);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    }
 
+
+/* phone size */
   @media screen 
-  and (max-width: 420px){
+  and (max-width:767px)
+  and (min-width:320px){
+    .projects_section_container{
+      width: 100%;
+      height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top:100px;
+    }
     .projects{
         width: 45%;
         height: 80px;
@@ -69,5 +116,4 @@ margin-top:100px;
         transform: rotate(360deg);
       }
     }
-
   }
