--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -6,11 +6,10 @@
     
 
 }
-/* webApp size */ /* Ipad Size  */
+/* desktop size */ 
 
 @media screen 
-  and (min-width: 421px) 
-
+and (min-width: 1024px)
   {
     .skills_header_button{
         width: 100px;
@@ -112,13 +111,96 @@
     display: none;
     }
 }
+  /* tablet size */
+  @media screen 
+    and (max-width:1023px)
+    and (min-width:768px){
+        .skills_button{
+            width: 100px;
+            height: 100px;
+            border-radius: 150px;
+            /* background-color: #334257; */
+            /* background: -webkit-linear-gradient(180deg, #334257  10%, #476072 50%); */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            color:white;
+            font-weight: bolder;
+            font-size: 4.5vw;
+            cursor: pointer;
+            animation: skillsMobile 10s linear infinite;
+            margin-top:100px
+        }
+    
+        @keyframes skillsMobile {
+            0%{
+            right:0px;
+            top:0px;
+            background-color: #334257 ;
+           
+            }
+            25%{
+            top:0px;
+            right:100px;
+            background: -webkit-linear-gradient(30deg, #334257  10%, #476072 60%);
+    
+            }
+            50%{
+                top:0px;
+                right:0px;
+                background: -webkit-linear-gradient(90deg, #334257  10%, #476072 50%);
+            }
+            75%{
+                top:0px;
+                right:-100px;
+                background: -webkit-linear-gradient(180deg, #334257  10%, #476072 50%);
+            }
+            100%{
+                right:0px;
+                top:0px;
+                background-color: #334257 ;        
+            }
+    
+        }
+    .skillsList_container{
+            width:90%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center; 
+            margin-right: 100px;
+            border-radius: 90px;
+    }
+    .first_list_skills, .second_list_skills, .third_list_skills{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        list-style-type: none;
+        font-weight: 100px;
+        font-size: 1.7vw;
+        position: relative;
+        }
+    .list_skill{
+        margin: 10px;
+        color: #EEEEEE;
+        list-style-type: none;
+        font-size: 1.7vw;
+        font-weight: bolder;
+        font-style: oblique;
+        cursor: pointer;
+    }
+    .skillsList_container{
+        display: none;
+    }
+    }
 
-
-
-/* --------------------------- */
 /* phone size */
 @media screen 
-    and (max-width: 420px) 
+and (max-width:767px)
+and (min-width:320px)
 {
     .skills_button{
         width: 100px;
@@ -201,6 +283,4 @@
     display: none;
 }
 }
-
-/* --------------------------- */
 
