--- a/new-portfolio/src/components/trivia/Trivial.css
+++ b/new-portfolio/src/components/trivia/Trivial.css
@@ -1,27 +1,133 @@
-.app {
-  background-color: #334257;
-    width:80%;
+
+/* desktop size */
+@media screen 
+  and (min-width: 1024px){
+    .app {
+      background-color: #334257;
+        width:80%;
+        min-height: 200px;
+        height: min-content;
+        border-radius: 15px;
+        padding: 20px;
+        box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+        display: flex;
+        justify-content: space-evenly;
+    
+      }
+    .score_section {
+      width: 100%;
+      height: min-content;
+      min-height: 200px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      font-size: 4vh;
+      color: white;
+      }
+      
+      /* QUESTION/TIMER/LEFT SECTION */
+      .question-section {
+        width: 100%;
+        position: relative;
+        color: #ffffff;
+        font-weight: bolder;
+      }
+      
+      .question-count {
+        margin-bottom: 20px;
+        font-size: 1.5vw;
+      }
+      
+      .question-count span {
+        font-size: 3vw;
+      }
+      
+      .question-text {
+        margin-bottom: 12px;
+        font-size: 1.5vw;
+      }
+      
+      /* ANSWERS/RIGHT SECTION */
+      .answer-section {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+      }
+      
+      button {
+        width: 70%;
+        font-size: 1.5vw;
+        color: white;
+        background-color: #476072;
+        border-radius: 10px;
+        display: flex;
+        padding: 5px;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        border: none;
+      }
+      
+      .correct {
+        background-color: #2f922f;
+      }
+      
+      .incorrect {
+        background-color: #ff3333;
+      }
+      
+      button:hover {
+        background-color: #334257;
+        box-shadow: 5px 5px 5px #548CA8;
+      }
+      
+      button:focus {
+        outline: none;
+      }
+      
+      button svg {
+        margin-right: 5px;
+      }
+  }
+
+
+/* tablet size */
+@media screen 
+and (max-width:1023px)
+and (min-width:768px){
+  .app {
+    background-color: #334257;        
+    width:100%;
     min-height: 200px;
     height: min-content;
     border-radius: 15px;
     padding: 20px;
     box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
     display: flex;
-    justify-content: space-evenly;
-
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .question-section {
+    width: 100%;
+    position: relative;
+    color: #ffffff;
+    font-weight: bolder;
   }
 
-
-.score_section {
-  width: 100%;
-  height: min-content;
-  min-height: 200px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: 4vh;
-  color: white;
+  .score_section {
+    width: 100%;
+    height: min-content;
+    min-height: 200px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 3.5vh;
+    color: white;
   }
   
   /* QUESTION/TIMER/LEFT SECTION */
@@ -34,31 +140,31 @@
   
   .question-count {
     margin-bottom: 20px;
-    font-size: 1.5vw;
+    font-size: 3vw;
   }
   
   .question-count span {
-    font-size: 3vw;
+    font-size: 5vw;
   }
   
   .question-text {
     margin-bottom: 12px;
-    font-size: 1.5vw;
+    font-size: 3vw;
   }
   
   /* ANSWERS/RIGHT SECTION */
   .answer-section {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 50% 50%;
+    gap: 10px;
   }
   
   button {
     width: 70%;
-    font-size: 1.5vw;
-    color: white;
+    font-size: 3vw;
+    color: #fff;
     background-color: #476072;
     border-radius: 10px;
     display: flex;
@@ -66,7 +172,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border: none;
+    border: 1px solid white;
   }
   
   .correct {
@@ -77,10 +183,6 @@
     background-color: #ff3333;
   }
   
-  button:hover {
-    background-color: #334257;
-    box-shadow: 5px 5px 5px #548CA8;
-  }
   
   button:focus {
     outline: none;
@@ -89,9 +191,13 @@
   button svg {
     margin-right: 5px;
   }
-/* mobile version  */
+}
+
+
+/* phone size  */
   @media screen
-    and (max-width: 420px){
+  and (max-width:767px)
+  and (min-width:320px){
       .app {
         background-color: #334257;        
         width:100%;
@@ -185,6 +291,4 @@
       button svg {
         margin-right: 5px;
       }
-    
-
     }
