--- a/new-portfolio/src/pages/LandingPage.css
+++ b/new-portfolio/src/pages/LandingPage.css
@@ -5,3 +5,15 @@
     flex-direction: column;
     align-items: center;
 }
+/* phone size */
+@media screen 
+and (max-width:767px)
+and (min-width:320px){
+    .landingPage__container{
+        width: 100%;
+        height: 600px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
