--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -1,14 +1,15 @@
-.ProjectsPage__container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
 
 
+/* desktop size */
 @media screen
-    and (min-width: 420px){
+and (min-width: 1024px){
+    .ProjectsPage__container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
         .projectsPage_section{
             width: 78%;
             height: 700px;
@@ -26,8 +27,49 @@
         }
     }
 
-@media screen
-    and (max-width: 420px){
+/* tablet size */
+@media screen 
+and (max-width:1023px)
+and (min-width:768px){
+    .ProjectsPage__container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .projectsPage_section{
+        /* background: -webkit-linear-gradient(30deg, #334257  10%, #476072 90%); */
+        width: 100%;
+        height: 600px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        margin-top: 40px;
+    }
+    .eachProject_section{
+        width: 100%;
+        display: grid;
+        grid-template-columns:1fr 1fr;
+        gap: 15px;
+        justify-items: center;
+    }
+}
+
+ /* phone size */
+ @media screen 
+ and (max-width:767px)
+ and (min-width:320px)
+    {
+        .ProjectsPage__container{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
         .projectsPage_section{
             /* background: -webkit-linear-gradient(30deg, #334257  10%, #476072 90%); */
             width: 100%;
