--- a/new-portfolio/src/pages/QuizPage.css
+++ b/new-portfolio/src/pages/QuizPage.css
@@ -1,68 +1,140 @@
-.whyPage__container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;   
+/* desktop size */
+@media screen 
+  and (min-width: 1024px){
+    .whyPage__container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;   
+    }
+    .whyPage_section{
+        width: 78%;
+        height: 700px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    
+    .title_WhyPage{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        color: white;
+        font-weight: bolder;
+        font-size: 1.5vw;
+    
+    }
+    
+    .subtitle_WhyPage{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        color: white;
+        font-weight: bolder;
+        font-size: 1.5vw;
+    
+    }
+    .button_container_WhyPage{
+        margin-top: 30px;
+        width:100%;
+        display: flex;
+        justify-content: center;
+    
+    }
+    .quizButton_section{
+        width: 20%;
+        margin-left: 10px;
+        background-color: #334257;
+        border: none;
+        height: 40px;
+        font-size: 1.5vw;
+    }
+    .trivia_container_whyPage{
+        margin-top: 100px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }    
+  }
+
+/* tablet size */
+@media screen 
+and (max-width:1023px)
+and (min-width:768px){
+    .whyPage__container{
+        margin-top: 50px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;   
+    }
+    .whyPage_section{
+        width: 80%;
+        min-height: 700px;
+        height: min-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
+    .title_WhyPage{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        color: white;
+        font-weight: bolder;
+        font-size: 3vw;
+    
+    }
+    
+    .subtitle_WhyPage{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        color: white;
+        font-weight: bolder;
+        font-size: 3vw;
+    
+    }
+    .button_container_WhyPage{
+        margin-top: 30px;
+        width:100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .quizButton_section{
+        width: 50%;
+        margin-left: 10px;
+        background-color: #334257;
+        border: none;
+        height: 40px;
+        font-size: 3vw;
+    }
+    .trivia_container_whyPage{
+        margin-top: 50px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
-.whyPage_section{
-    width: 78%;
-    height: 700px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.title_WhyPage{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    color: white;
-    font-weight: bolder;
-    font-size: 1.5vw;
-
-}
-
-.subtitle_WhyPage{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    color: white;
-    font-weight: bolder;
-    font-size: 1.5vw;
-
-}
-.button_container_WhyPage{
-    margin-top: 30px;
-    width:100%;
-    display: flex;
-    justify-content: center;
-
-}
-.quizButton_section{
-    width: 20%;
-    margin-left: 10px;
-    background-color: #334257;
-    border: none;
-    height: 40px;
-    font-size: 1.5vw;
-}
-.trivia_container_whyPage{
-    margin-top: 100px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
 
 
 
-
-@media screen
-    and (max-width: 420px){
+/* phone size */
+@media screen 
+and (max-width:767px)
+and (min-width:320px){
 
         .whyPage__container{
             margin-top: 50px;
