--- a/new-portfolio/src/pages/StoryPage.css
+++ b/new-portfolio/src/pages/StoryPage.css
@@ -1,5 +1,6 @@
-@media screen
-    and (min-width: 421px){
+/* desktop size */
+@media screen 
+  and (min-width: 1024px){
         .questionsPage__container{
             width: 100%;
             min-height: 750px;
@@ -128,13 +129,117 @@
         }
     }
 
+/* tablet size */
+@media screen 
+and (max-width:1023px)
+and (min-width:768px){
+    .secction_story{
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+    }
+    .myHistory__container{
+        width: 100%;
+        min-height: 700px;
+        height: min-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+
+    }
+
+    .question_secction_button{
+        height: min-content;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .question_I{
+        background-color: #334257;
+        border-radius: 10px;
+        margin:2px;
+        width:25%;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        color: #EEEEEE;
+        font-weight: bolder;
+        font-size: 2.5vw;
+    }
 
 
+    
+    .history_section{
+        width: 80%;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 30px;
+    }
+    
+    .picture_history_section{
+        width: 100%;
+        display: flex;
+        flex-direction:row;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    .question_picture{
+        border-radius: 0.5rem 0.5rem 0 0;
+        width: 100%;
+        object-fit: cover;
+        max-height: max(20rem, 50vh);
+        aspect-ratio: 4/3;
+        mix-blend-mode: var(--card-blend-mode);
+        opacity: 0.6;
+        margin-top: 30px;            
+    } 
+    .text_history_section{
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+    }
+    
+    .question_title_history{
+        text-align:start;
+        font-weight: bolder;
+        font-size: 4vw;
+        color:white;
+        text-shadow: 1px 1px 2px black;
+    }
+    .question_text_history{
+        text-align:justify;
+        font-size: 3vw;
+        color:white;
+        font-style: oblique;
+        font-weight: bolder;
+    }
 
-/* --------------phone version-------------------- */
+    .cv_icon{
+        width:30%;
+        margin: 5px;
+        cursor:pointer;
+    }
+    .cv_title{
+        font-style: unset;
+        color: black;
+        font-size: 3vw;
+       text-decoration: underline;
+       font-weight: bolder;
+    }
+}
 
-@media screen
-    and (max-width: 420px) {
+
+/* phone size */
+@media screen 
+and (max-width:767px)
+and (min-width:320px) {
         .secction_story{
             margin-top: 40px;
             display: flex;
