--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -36,8 +36,6 @@
         cursor:pointer;
         border: 3px solid #548CA8;
         box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-
-    
     }
 
     .headerIcon_container{
@@ -91,7 +89,8 @@
   /* tablet size */
   @media screen 
     and (max-width:1023px)
-    and (min-width:768px){
+    and (min-width:768px)
+    {
         .header__container{
             width: 100%;
             display: grid;
@@ -99,19 +98,18 @@
             background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
         }
         .header_logo_container{
-            width: 130%;
+            width: 100%;
             margin-top:20px;
             margin-left: 30px;
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
             align-items: flex-start;
-        
         }
         .profilePicture{
-            width: 100%;
+            width: 70%;
             border-radius: 80px;
-            margin-top: 50px;
+            margin-top: 80px;
             cursor:pointer;
             border: 2px solid #548CA8;
         }
@@ -123,7 +121,7 @@
             align-items:flex-end;
         }
         .iconSection{
-            width: 50%;
+            width: 35%;
             margin-top:20px;
             display: flex;
             flex-direction: column;
@@ -138,7 +136,6 @@
             width:30%;
             margin: 5px;
             cursor:pointer;
-          
         }
     
         .name_title{
@@ -156,12 +153,12 @@
         .navBarIcon2{
             width: 100%;
             color:white;
-            margin-bottom: 5px;
+            margin-bottom: 40px;
             
         }
         .navBarIcon{
             position: absolute;
-            top:50px;
+            top:75px;
             right:0px;
             width:100%;
             height:360px;
@@ -185,7 +182,7 @@ and (min-width:320px)
         background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
     }
     .header_logo_container{
-        width: 130%;
+        width: 100%;
         margin-top:20px;
         margin-left: 30px;
         display: flex;
@@ -197,7 +194,7 @@ and (min-width:320px)
     .profilePicture{
         width: 100%;
         border-radius: 80px;
-        margin-top: 50px;
+        margin-top: 70px;
         cursor:pointer;
         border: 2px solid #548CA8;
     }
@@ -224,7 +221,6 @@ and (min-width:320px)
         width:30%;
         margin: 5px;
         cursor:pointer;
-      
     }
 
     .name_title{
@@ -242,12 +238,12 @@ and (min-width:320px)
     .navBarIcon2{
         width: 100%;
         color:white;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
         
     }
     .navBarIcon{
         position: absolute;
-        top:50px;
+        top:60px;
         right:0px;
         width:100%;
         height:360px;
