--- a/new-portfolio/src/components/skills/Skills.css
+++ b/new-portfolio/src/components/skills/Skills.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-top: 100px;
+    /* margin-top: 50px; */
     
 
 }
@@ -250,37 +250,37 @@ and (min-width:320px)
         }
 
     }
-.skillsList_container{
-        width:90%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center; 
-        margin-right: 100px;
-        border-radius: 90px;
-}
-.first_list_skills, .second_list_skills, .third_list_skills{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-    font-weight: 100px;
-    font-size: 1.7vw;
-    position: relative;
+    .skillsList_container{
+            width:90%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center; 
+            margin-right: 100px;
+            border-radius: 90px;
     }
-.list_skill{
-    margin: 10px;
-    color: #EEEEEE;
-    list-style-type: none;
-    font-size: 1.7vw;
-    font-weight: bolder;
-    font-style: oblique;
-    cursor: pointer;
-}
-.skillsList_container{
-    display: none;
-}
-}
+    .first_list_skills, .second_list_skills, .third_list_skills{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        list-style-type: none;
+        font-weight: 100px;
+        font-size: 1.7vw;
+        position: relative;
+        }
+    .list_skill{
+        margin: 10px;
+        color: #EEEEEE;
+        list-style-type: none;
+        font-size: 1.7vw;
+        font-weight: bolder;
+        font-style: oblique;
+        cursor: pointer;
+    }
+    .skillsList_container{
+        display: none;
+    }
+    }
 
