--- a/new-portfolio/src/pages/LandingPage.css
+++ b/new-portfolio/src/pages/LandingPage.css
@@ -6,7 +6,7 @@
     align-items: center;
 }
 /* phone size */
-@media screen 
+/* @media screen 
 and (max-width:767px)
 and (min-width:320px){
     .landingPage__container{
@@ -16,4 +16,4 @@ and (min-width:320px){
         flex-direction: column;
         align-items: center;
     }
-}
+} */
