--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -12,31 +12,44 @@ and (min-width:1024px) {
         align-items: center;
     }
     .contact_items{
-        background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
-        width: 40%;
-        height: 80px;
+        /* background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% ); */
+        width: 100%;
+        /* height: 80px; */
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        border-radius: 100px;
-        box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+        /* box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75); */
     }
 
-    .email_contact_section, .phone_contact_section{
+    .email_contact_section, .phone_contact_section, .whatsapp_contact_section{
         width: 100%;
         color:#EEEEEE;
         font-weight: bolder;
         font-size: 2vw;
-        cursor: pointer;
         text-decoration: none;
-        animation: tracking-in-contract-bck 4s cubic-bezier(0.215, 0.610, 0.355, 1.000) both infinite;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* animation: tracking-in-contract-bck 4s cubic-bezier(0.215, 0.610, 0.355, 1.000) both infinite; */
 
     }
     .phone_text{
         text-decoration: none;
         color:#EEEEEE;
-    }
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      .email-icon-container{
+        cursor: pointer;
+      }
+
+      .email-icon-footer, .phone-icon-footer, .whatsapp-icon-footer{
+        margin-left: 10px;
+      }
+
 
     @keyframes tracking-in-contract-bck {
         0% {
@@ -76,13 +89,11 @@ and (min-width:1024px) {
     }
         .contact_items{
             background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
-            width: 90%;
-            height: 40px;
+            width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: space-around;
             align-items: center;
-            border-radius: 100px;
         }
         .email_contact_section, .phone_contact_section{
             width: 100%;
@@ -114,13 +125,12 @@ and (min-width:320px){
 }
     .contact_items{
         background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
-        width: 90%;
+        width: 100%;
         height: 40px;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        border-radius: 100px;
     }
     .email_contact_section, .phone_contact_section{
         width: 100%;
