--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -1,15 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
 
-.ReactModal__Content.ReactModal__Content--after-open {
-    display: flex;
-    justify-content: center;
-}
+
+
 @media screen 
 and (min-width: 1024px) {
+    .ReactModal__Content.ReactModal__Content--after-open {
+        top: 50%;
+        left: 50%;
+        right: auto;
+        bottom: auto;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        border: none;
+        overflow: hidden;
+        width: 30%;
+        background-color:#C0C0C0 ;
+    }
 
 .form__container{
-        width:50%;
+        width:100%;
         display: flex;
         flex-direction: column;
         border-radius: 20px;
@@ -91,6 +101,19 @@ and (min-width: 1024px) {
 @media screen 
     and (max-width:1023px)
     and (min-width:768px){
+        
+        .ReactModal__Content.ReactModal__Content--after-open {
+            top: 50%;
+            left: 50%;
+            right: auto;
+            bottom: auto;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+            border: none;
+            overflow: hidden;
+            width: 60%;
+            background-color:#C0C0C0 ;
+        }
         .form__container{
             width: 100%;
             display: flex;
@@ -152,6 +175,19 @@ and (min-width: 1024px) {
 @media screen 
 and (max-width:767px)
 and (min-width:320px) {
+
+    .ReactModal__Content.ReactModal__Content--after-open {
+        top: 50%;
+        left: 50%;
+        right: auto;
+        bottom: auto;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        border: none;
+        overflow: hidden;
+        width: 100%;
+        background-color:#C0C0C0 ;
+    }
     .form__container{
         width: 100%;
         display: flex;
