--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -30,7 +30,6 @@ and (min-width: 1024px) {
 
  .question:hover{
     width: 100%;
-    height: 100px;
     background-color: #334257;
     color: #EEEEEE;
     border-radius: 20px;
@@ -39,7 +38,7 @@ and (min-width: 1024px) {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 1px 2px 2px 2px #548CA8;
+    box-shadow: 2px 2px 2px #548CA8;
 }
 .questions_container_sidebar{
     width:10%;
