--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -65,6 +65,7 @@ and (min-width:768px){
     {
         .ProjectsPage__container{
             width: 100%;
+            margin-top: 50px;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
