--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -6,9 +6,10 @@
   and (min-width: 1024px) {
     .header__container{
         width: 100%;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
+        /* grid-template-columns: repeat(2, 1fr); */
         background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+        align-items: center;
     }
 
     .header_logo_container{
@@ -21,32 +22,43 @@
         align-items: flex-start;
     
     }
+    .name-title-header {
+        color: #EEEEEE;
+        font-weight: bolder;
+        font-size: 20px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        width: 33%;
+    }
     .profile_section{
         width: 100%;
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding-top:200px;
+        padding-bottom: 100px;
+    }
+    .profile_section img {
+        opacity: 0.7;
     }
     
     .profilePicture{
-        width:45%;
-        border-radius: 50px;
-        margin-top: 50px;
+        width:35%;
         cursor:pointer;
-        border: 3px solid #548CA8;
         box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
     }
 
     .headerIcon_container{
-        width: 100%;
+        width: 50%;
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
+
     .iconSection{
-        width:100%;
+        width:33%;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
@@ -54,10 +66,13 @@
     }
 
     .icon_container{
-        width: 35%;
+        width: 33%;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: flex-start;
+    }
+    .icon_container a{
+        width: 10%;
     }
     .iconHeader{
         width: 50%;
@@ -66,15 +81,24 @@
         cursor:pointer;
     }
 
+    .name-title-container {
+        display: flex;
+        flex-direction: column;
+        width: 31%;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+        margin-left: -70px;
+    }
 
-    .name_title{
+    .name_title, .surname_title, .secondLastName_title{
         font-weight: bolder;
-        font-size: 3vw;
-        font-family: 'Bonheur Royale', cursive;
+        font-size: 2vw;
+        /* font-family: 'Bonheur Royale', cursive; */
         cursor: pointer;
         text-shadow: 1px 1px 2px black;
         color: white;
-        margin-bottom: 100px;
+        /* margin-bottom: 100px; */
     }
 
     .navBarIcon{
@@ -96,6 +120,7 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+            align-items: center;
         }
         .header_logo_container{
             width: 100%;
@@ -108,10 +133,7 @@
         }
         .profilePicture{
             width: 70%;
-            border-radius: 80px;
-            margin-top: 80px;
             cursor:pointer;
-            border: 2px solid #548CA8;
         }
         .headerIcon_container{
             width: 100%;
@@ -121,16 +143,17 @@
             align-items:flex-end;
         }
         .iconSection{
-            width: 35%;
-            margin-top:20px;
+            width: 100%;
+            margin-top: 20px;
             display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            justify-content: space-between;
+            flex-direction: row;
+            align-items: center;
+            /* background: yellow; */
+            justify-content: center;
         }
         .icon_container{
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
         }
         .iconHeader{
             width:30%;
@@ -180,6 +203,7 @@ and (min-width:320px)
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+        align-items: center;
     }
     .header_logo_container{
         width: 100%;
@@ -193,10 +217,7 @@ and (min-width:320px)
     }
     .profilePicture{
         width: 100%;
-        border-radius: 80px;
-        margin-top: 70px;
         cursor:pointer;
-        border: 2px solid #548CA8;
     }
     .headerIcon_container{
         width: 100%;
@@ -206,16 +227,17 @@ and (min-width:320px)
         align-items:flex-end;
     }
     .iconSection{
-        width: 50%;
-        margin-top:20px;
+        width: 100%;
+        margin-top: 20px;
         display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+        /* background: yellow; */
+        justify-content: center;
     }
     .icon_container{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
     }
     .iconHeader{
         width:30%;
