--- a/new-portfolio/src/pages/LandingPage.css
+++ b/new-portfolio/src/pages/LandingPage.css
@@ -1,8 +1,20 @@
 .landingPage__container{
     width: 100%;
-    height: 600px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+
+.landing-page-btn-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 50px;
+}
+button.button-download-cv a {
+    text-decoration: none;
+    color: white;
+}
