--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -45,8 +45,11 @@
     
     .profilePicture{
         width:35%;
+        height: 35%;
         cursor:pointer;
         box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 20px;
     }
 
     .headerIcon_container{
@@ -55,7 +58,12 @@
         flex-direction: row;
         justify-content: space-between;
     }
-
+    button.button-download-cv, button.button-read-more{
+        width: 40%;
+        padding: 15px;
+        border-radius: 10px;
+        border: 1px solid white;
+    }
 
     .iconSection{
         width:33%;
@@ -134,6 +142,8 @@
         .profilePicture{
             width: 70%;
             cursor:pointer;
+            border-top-right-radius: 20px;
+            border-bottom-left-radius: 20px;
         }
         .headerIcon_container{
             width: 100%;
@@ -221,6 +231,8 @@ and (min-width:320px)
         width: 100%;
         cursor:pointer;
         opacity: 0.7;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 20px;
     }
     .profile_section {
         margin-top: 20px;
@@ -290,7 +302,8 @@ and (min-width:320px)
         
     }
     button.button-download-cv, button.button-read-more{
-        width: 30%;
+        width: 40%;
+        padding: 15px
     }
     .navBar-mobile-container {
         display: flex;
