--- a/new-portfolio/src/pages/LandingPage.css
+++ b/new-portfolio/src/pages/LandingPage.css
@@ -18,3 +18,46 @@ button.button-download-cv a {
     text-decoration: none;
     color: white;
 }
+.message-confirmation-container {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    justify-content: center;
+    text-align: left;
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: bold;
+}
+button.btn-confirmation-read-more {
+    margin: auto;
+    border: 1px solid white;
+    width: 50%;
+    padding: 20px;
+    margin-top: 20px;
+}
+@media screen 
+and (max-width:767px)
+and (min-width:320px)
+ {
+    .message-confirmation-container {
+        display: flex;
+        flex-direction: column;
+        width: fit-content;
+        justify-content: center;
+        text-align: left;
+        color: white;
+        padding: 10px;
+        font-size: 15px;
+        font-weight: bold;
+
+    }
+    .btn-confirmation-read-more{
+        margin: auto;
+        border: 1px solid white;
+        width: 50%;
+        padding: 20px;
+        margin-top: 20px;
+    }
+
+ }
