--- a/new-portfolio/src/pages/QuizPage.css
+++ b/new-portfolio/src/pages/QuizPage.css
@@ -9,12 +9,12 @@
         align-items: center;   
     }
     .whyPage_section{
-        width: 78%;
+        width: 100%;
         height: 700px;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
     }
     
     .title_WhyPage{
@@ -80,12 +80,12 @@ and (min-width:768px){
         align-items: center;   
     }
     .whyPage_section{
-        width: 80%;
+        width: 100%;
         min-height: 700px;
         height: min-content;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content:center;
         align-items: center;
     }
     
@@ -153,13 +153,13 @@ and (min-width:320px){
             align-items: center;   
         }
         .whyPage_section{
-            width: 80%;
+            width: 100%;
             min-height: 700px;
             margin-top: 50px;
             height: min-content;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
         }
         
