--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -1,8 +1,19 @@
+.headerContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
 .headerIconSection {
   width: 33%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+}
+.headerTitleText{
+    font-size: 4vh;
 }
 
 .navContainer {
@@ -17,8 +28,15 @@
   padding-left: 10px;
 }
 
+.navIconsContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+}
+
 .navLiIcons {
-  width: 10%;
+  width: 12%;
 }
 
 .navIconImg {
